# SimpleKitchen

./: .gitignore  Cargo.toml  FeatureIdeas.md  README.md
migrations/: 20231126220410_schema.down.sql  20231126220410_schema.up.sql  20231126220417_index.down.sql  20231126220417_index.up.sql
src/: ingredient.rs  lib.rs  recipe.rs  recipe_ingredient.rs  types.rs  user.rs
src/themealdb/: grabrecipe.py
