[package]
name = "simple_kitchen"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simple_kitchen"
path = "src/lib.rs"

[[bin]]
name = "simple_kitchen_server"
path = "src/bin/server.rs"

[[bin]]
name = "simple_kitchen_client"
path = "src/bin/client.rs"

[[bin]]
name = "grabrecipe"
path = "src/bin/grabrecipe.rs"

[dependencies]
sqlx = { version = "0.7.3", features = ['postgres', 'runtime-async-std']}
async-std = { version = "1.12.0", features = ['attributes']}
dotenvy = "0.15.7"
reqwest = { version = "0.11.22", features = ["json"]}
tokio = { version = "1.34.0", features = ["full"]}
serde_json = "1.0.108"
serde = "1.0.193"
mealdb = "0.1.1"

[profile.dev.package.sqlx-macros]
opt-level = 3

[lints.rust]
missing_docs = "warn"

[lints.clippy]
# warnings = "deny"
unwrap_used = "deny"
expect_used = "deny"
missing_docs_in_private_items = "warn"
